fix: playlist collapsed sidebar text

--- a/styles/youtube/catppuccin.user.less
+++ b/styles/youtube/catppuccin.user.less
@@ -1210,6 +1210,18 @@
     .video-summary-content-view-model-wiz__paragraph {
       color: @text;
     }
+
+    /* Playlist collapsed sidebar */
+    #next-video-title {
+      color: @text !important;
+    }
+    #publisher-container {
+      .yt-simple-endpoint.style-scope.yt-formatted-string,
+      .index-message-wrapper.style-scope.ytd-playlist-panel-renderer,
+      .index-message-wrapper.style-scope.ytd-playlist-panel-renderer::before {
+        color: @subtext0 !important;
+      }
+    }
   }
 }
 
